kubernetes/INGRESS/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wandaprep-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
  - host: app.wandaprep.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wandaprep-lb-svc
            port:
              number: 80
